# CRFzit

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/crfzit/crfzit/: MainActivity.kt
app/app/src/main/java/com/crfzit/crfzit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/values/: strings.xml  themes.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/crfzit/crfzit/: MainActivity.kt
app/src/main/java/com/crfzit/crfzit/data/model/: DashboardModels.kt
app/src/main/java/com/crfzit/crfzit/data/repository/: DashboardRepository.kt  MockDashboardRepository.kt  UdsDashboardRepository.kt
app/src/main/java/com/crfzit/crfzit/data/uds/: UdsClient.kt
app/src/main/java/com/crfzit/crfzit/ui/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/theme/: Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
daemon/: CMakeLists.txt  arm64-toolchain.cmake  deps.CMakeLists.txt
daemon/cpp/: CMakeLists.txt  db_manager.cpp  db_manager.h  grpc_server.cpp  grpc_server.h  kernel_interface.cpp  kernel_interface.h  log.h  logger.h  main.cpp  policy_engine.cpp  policy_engine.h  request_router.cpp  shell_executor.cpp  shell_executor.h  state_manager.cpp  state_manager.h  uds_server.cpp  uds_server.h
daemon/rust/: Cargo.toml  build.rs
daemon/rust/.cargo/: config.toml
daemon/rust/scr/: lib.rs
daemon/rust/src/: config_manager.rs  lib.rs  logic_controller.rs
daemon/rust/src/core/: mod.rs
daemon/src/: main.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ipc/proto/: crfzit.proto
scripts/: remote_build.sh
