# 文件路径: /CRFzit/daemon/rust/Cargo.toml

[package]
name = "crfzit_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "crfzit_core_logic"
crate-type = ["staticlib"]

[dependencies]
# FFI bridge to C++
cxx = "1.0"

# Database
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cxx-build = "1.0"