# 文件路径: /CRFzit/daemon/rust/Cargo.toml (修正版)

[package]
name = "crfzit_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "crfzit_core_logic"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19.0" # <<< 新增依赖

[build-dependencies]
cxx-build = "1.0"